@@ -208,6 +208,21 @@ void FrameLoaderClientHaiku::dispatchDidChangeLocationWithinPage()
     notImplemented();
 }
 
+void FrameLoaderClientHaiku::dispatchDidPushStateWithinPage()
+{
+    notImplemented();
+}
+
+void FrameLoaderClientHaiku::dispatchDidReplaceStateWithinPage()
+{
+    notImplemented();
+}
+
+void FrameLoaderClientHaiku::dispatchDidPopStateWithinPage()
+{
+    notImplemented();
+}
+
 void FrameLoaderClientHaiku::dispatchWillClose()
 {
     notImplemented();
